# NovaBank

./: .gitignore  README.md  limpiar_bd.py  main.py  pyproject.toml  requirements.txt  test_login.py
database/: banco.db  db_manager.py
logic/: auth.py  transacciones.py
views/: cambiar_clave.py  consultar_saldo.py  dashboard.py  depositar.py  historial.py  login.py  retirar.py  transferir.py
